--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.5
+dotenv==0.9.9
 faiss-cpu==1.13.2
 fastapi==0.129.0
 h11==0.16.0
@@ -19,6 +20,7 @@ pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 pypdfium2==5.4.0
+python-dotenv==1.2.1
 python-multipart==0.0.22
 requests==2.32.5
 starlette==0.52.1
